2014-03-05  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-group.el (gnus-group-make-group): Clarify prompt.

	* mml.el (mml-insert-mime-headers): Allow `recipient-filename'.

2014-02-23  David Engster  <deng@randomsample.de>

	* auth-source.el (auth-source-netrc-saver): Do not depend on `cl-lib'
	to stay compatible with older Emacsen, so replace `cl-loop' with
	`loop'.

2014-02-22  Daniel Colascione  <dancol@dancol.org>

	* auth-source.el (auth-source-secrets-listify-pattern): New function.
	(auth-source-secrets-search): Don't pass invalid patterns to secrets.el;
	instead, build list of patterns.

2014-02-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-prepare, gnus-article-prepare-display):
	Display header attachment buttons by gnus-article-prepare-display
	rather than gnus-article-prepare so as to view in mml-preview as well.

2014-02-13  Teodor Zlatanov  <tzz@lifelogs.com>

	* auth-source.el (auth-sources): Add pointer to what the .gpg extension
	in `auth-sources' means and link to EPA docs.

2014-02-12  Lars Ingebrigtsen  <larsi@gnus.org>

	* nnmail.el (nnmail-expand-newtext): Further sub-match fixups
	(bug#12375).

2014-02-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-goto-part): Find a button in the body first.
	(gnus-mime-buttonize-attachments-in-header): Number hidden buttons.

2014-02-09  Lars Ingebrigtsen  <larsi@gnus.org>

	* message.el (message-tab): Mention what happens on normal tabs
	(bug#11297).

2014-02-08  Glenn Morris  <rgm@gnu.org>

	* auth-source.el (auth-sources): Doc fix.  (Bug#16642)

2014-02-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-mime-buttonize-attachments-in-header): Display
	buttons that are hidden in unselected alternative part as well.
	(gnus-mime-display-alternative): Redraw attachment buttons in header.

	* gmm-utils.el (gmm-flet, gmm-labels): Add edebug spec.

2014-02-07  Lars Ingebrigtsen  <larsi@gnus.org>
