@@ -1,3 +1,12 @@
+2014-03-06  Lars Ingebrigtsen  <larsi@gnus.org>
+
+	* mml.el (mml-expand-html-into-multipart-related): Allow sending HTML
+	messages with embedded images.
+
+2014-03-06  Lars Ingebrigtsen  <larsi@gnus.org>
+
+	* message.el (message-make-html-message-with-image-files): New command.
+
 2014-03-05  Lars Ingebrigtsen  <larsi@gnus.org>
 
 	* gnus-group.el (gnus-group-make-group): Clarify prompt.
